{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 216,
  "lineage": "a11e1b08-4ef2-8ef0-675f-9ce7d4c62c13",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27b4618aff07835",
            "association_id": "eipassoc-09266317555e6f151",
            "domain": "vpc",
            "id": "eipalloc-0d27b4618aff07835",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f36403ab6ef5e0e9",
            "private_dns": "ip-10-193-4-150.eu-west-1.compute.internal",
            "private_ip": "10.193.4.150",
            "public_dns": "ec2-52-31-142-70.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.142.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "INFRA-DEV-DGH-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:internet-gateway/igw-0ca5952102d42812a",
            "id": "igw-0ca5952102d42812a",
            "owner_id": "818732203669",
            "tags": {
              "Name": "INFRA-DEV-DGH",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27b4618aff07835",
            "connectivity_type": "public",
            "id": "nat-0c54ed2ea7274828b",
            "network_interface_id": "eni-0f36403ab6ef5e0e9",
            "private_ip": "10.193.4.150",
            "public_ip": "52.31.142.70",
            "subnet_id": "subnet-0f79a3afe4e2242fa",
            "tags": {
              "Name": "INFRA-DEV-DGH-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07ea90b9c9c136ff91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c54ed2ea7274828b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ea90b9c9c136ff9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca5952102d42812a",
            "id": "r-rtb-038e4944c3194ab751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038e4944c3194ab75",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:route-table/rtb-01b49606622f14e8b",
            "id": "rtb-01b49606622f14e8b",
            "owner_id": "818732203669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "INFRA-DEV-DGH-intra",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-intra",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-02278753053722c6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:route-table/rtb-07ea90b9c9c136ff9",
            "id": "rtb-07ea90b9c9c136ff9",
            "owner_id": "818732203669",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c54ed2ea7274828b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INFRA-DEV-DGH-private",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-private",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-02278753053722c6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:route-table/rtb-038e4944c3194ab75",
            "id": "rtb-038e4944c3194ab75",
            "owner_id": "818732203669",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca5952102d42812a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INFRA-DEV-DGH-public",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-public",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-02278753053722c6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0875e6f5e5ec0944b",
            "route_table_id": "rtb-01b49606622f14e8b",
            "subnet_id": "subnet-00e308186b08f2a8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042f4758f9b635f70",
            "route_table_id": "rtb-01b49606622f14e8b",
            "subnet_id": "subnet-0228d7a8cfbe9f69a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c04e6c267961ae3",
            "route_table_id": "rtb-01b49606622f14e8b",
            "subnet_id": "subnet-03b3a15464eddd50f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c77a32cef5c5e93",
            "route_table_id": "rtb-07ea90b9c9c136ff9",
            "subnet_id": "subnet-0ee51ed9fbe8a1644"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c4578c392ee5975",
            "route_table_id": "rtb-07ea90b9c9c136ff9",
            "subnet_id": "subnet-06b5ae5b4bdb8b9e1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092db2b7f437d1edd",
            "route_table_id": "rtb-07ea90b9c9c136ff9",
            "subnet_id": "subnet-0b7b7269b46f67020"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc743c697e8fb3e1",
            "route_table_id": "rtb-038e4944c3194ab75",
            "subnet_id": "subnet-0f79a3afe4e2242fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4cb41077893e8a5",
            "route_table_id": "rtb-038e4944c3194ab75",
            "subnet_id": "subnet-01267421d08383b1a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0857d1422498c40aa",
            "route_table_id": "rtb-038e4944c3194ab75",
            "subnet_id": "subnet-08fd1e828e685ab0e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-00e308186b08f2a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.193.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e308186b08f2a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-intra-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-intra-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-0228d7a8cfbe9f69a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.193.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0228d7a8cfbe9f69a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-intra-eu-west-1b",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-intra-eu-west-1b",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-03b3a15464eddd50f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.193.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b3a15464eddd50f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-intra-eu-west-1c",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-intra-eu-west-1c",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-0ee51ed9fbe8a1644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.193.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee51ed9fbe8a1644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-private-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-private-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-06b5ae5b4bdb8b9e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.193.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b5ae5b4bdb8b9e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-private-eu-west-1b",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-private-eu-west-1b",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-0b7b7269b46f67020",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.193.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7b7269b46f67020",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-private-eu-west-1c",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-private-eu-west-1c",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-0f79a3afe4e2242fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.193.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f79a3afe4e2242fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-public-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-public-eu-west-1a",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-01267421d08383b1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.193.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01267421d08383b1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-public-eu-west-1b",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-public-eu-west-1b",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:subnet/subnet-08fd1e828e685ab0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.193.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd1e828e685ab0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "818732203669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRA-DEV-DGH-public-eu-west-1c",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH-public-eu-west-1c",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "vpc_id": "vpc-02278753053722c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:vpc/vpc-02278753053722c6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.193.0.0/16",
            "default_network_acl_id": "acl-02d1ae71519561c4f",
            "default_route_table_id": "rtb-0634fa0cc41d42d01",
            "default_security_group_id": "sg-025f7b77d72da487a",
            "dhcp_options_id": "dopt-4477b823",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02278753053722c6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0634fa0cc41d42d01",
            "owner_id": "818732203669",
            "tags": {
              "Name": "INFRA-DEV-DGH",
              "Purpose": "Test",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH",
              "Purpose": "Test",
              "Terraform": "True"
            }
          }
        }
      ]
    },
    {
      "module": "module.wireguard",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wireguard",
      "provider": "module.wireguard.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0141514361b6a3c1b",
            "arn": "arn:aws:ec2:eu-west-1:818732203669:instance/i-0f493d935e4f345bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f493d935e4f345bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06dacba768bd3bec2",
            "private_dns": "ip-10-193-4-53.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.193.4.53",
            "public_dns": "ec2-52-49-81-42.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.81.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078e0488743df2ade",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f79a3afe4e2242fa",
            "tags": {
              "Name": "INFRA-DEV-DGH_wireguard"
            },
            "tags_all": {
              "Name": "INFRA-DEV-DGH_wireguard"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b3e14698827f2e8"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.wireguard.aws_security_group.wireguard",
            "module.wireguard.data.aws_ami.ubuntu",
            "module.wireguard.data.template_file.wireguard_userdata",
            "module.wireguard.data.template_file.wireguard_userdata_peers"
          ]
        }
      ]
    },
    {
      "module": "module.wireguard",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wireguard",
      "provider": "module.wireguard.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818732203669:security-group/sg-06b3e14698827f2e8",
            "description": "Communication to and from VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b3e14698827f2e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "INFRA-DEV-DGH_wireguard_sg",
            "name_prefix": "",
            "owner_id": "818732203669",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02278753053722c6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}